add:diagを出力するまでの時間のしきい値を確認

--- a/config/lane_width_calculator.param.yaml
+++ b/config/lane_width_calculator.param.yaml
@@ -4,6 +4,7 @@
     vehicle_width: 0.5
     vehicle_length: 0.5
     vehicle_height: 2.0
+    outside_lane_threshold_sec: 3.0
 
     # save settings
     save_to_csv: true
